--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
-    "eslint": "eslint './**/*.{js,jsx}'",
+    "eslint": "eslint --ext .js,.jsx, src/",
+    "eslint:fix": "eslint --ext .js,.jsx, src/ --fix",
     "build": "webpack --mode production"
   },
   "repository": {
